Style changes to make sure the header of LyricsMinimal doesn't wrap.
git-svn-id: svn+ssh://svn.wikia-code.com/svn/wikia/trunk@25498 e846bd91-c042-42a7-a218-4b65e2c1904d

--- a/skins/lyricsminimal/article.css
+++ b/skins/lyricsminimal/article.css
@@ -4,6 +4,11 @@
 	float:left;
 }
 
+.lyricsMinimalTop{
+	min-width:984px;
+	overflow:hidden;
+}
+
 #lyricsMinimalTop_leader{
 	float:left;
 	height:122px; /* the logo is 155px tall, and we're going to pad the box by 33px */
